--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,7 +45,7 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.1'
 
     // CameraX core library using the camera2 implementation
-    def camerax_version = "1.3.0-alpha07"
+    def camerax_version = "1.3.0-beta01"
     // The following line is optional, as the core library is included indirectly by camera-camera2
     //implementation "androidx.camera:camera-core:${camerax_version}"
     implementation "androidx.camera:camera-camera2:${camerax_version}"
