--- a/lib-view-record/build.gradle
+++ b/lib-view-record/build.gradle
@@ -3,7 +3,8 @@ plugins {
     id 'org.jetbrains.kotlin.android'
 }
 
-ext.libVersion = "1.0.2"
+//ext.libVersion = "1.0.2-kt1.6.10"
+ext.libVersion = "1.0.3"
 
 android {
     namespace 'io.keyss.view_record'
@@ -33,7 +34,7 @@ android {
 }
 
 dependencies {
-    compileOnly 'androidx.annotation:annotation:1.6.0'
+    compileOnly 'androidx.annotation:annotation:1.2.0'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
