--- a/settings.gradle
+++ b/settings.gradle
@@ -13,5 +13,5 @@ dependencyResolutionManagement {
     }
 }
 rootProject.name = "ViewRecord"
-include ':app'
+//include ':app'
 include ':lib-view-record'
