--- a/lib-view-record/build.gradle
+++ b/lib-view-record/build.gradle
@@ -4,7 +4,7 @@ plugins {
 }
 
 //ext.libVersion = "1.0.2-kt1.6.10"
-ext.libVersion = "1.0.3"
+ext.libVersion = "1.0.5"
 
 android {
     namespace 'io.keyss.view_record'
@@ -25,16 +25,16 @@ android {
         }
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
     }
     kotlinOptions {
-        jvmTarget = '1.8'
+        jvmTarget = '17'
     }
 }
 
 dependencies {
-    compileOnly 'androidx.annotation:annotation:1.2.0'
+    compileOnly 'androidx.annotation:annotation:1.7.0'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
