--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,10 @@ android {
 
 dependencies {
     implementation(project(':lib-view-record'))
+    //implementation 'io.keyss.android.library:view-record:1.0.8'
+
+
+
     implementation 'androidx.core:core-ktx:1.10.1'
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.9.0'
